# MobilePlatformRos2

./: .gitignore  LICENSE
arduino_sketches/encoder_handling/: encoder_handling.ino
arduino_sketches/spi_communication/: spi_communication.ino
experiment_ws/src/cpp_ocv/: CMakeLists.txt  package.xml
experiment_ws/src/cpp_ocv/src/: pub_node.cpp
experiment_ws/src/cv_basics/: package.xml  setup.py
experiment_ws/src/cv_basics/cv_basics/: webcam_pub.py
platform_ws/src/movement_pkg/: package.xml  setup.py
platform_ws/src/movement_pkg/movement_pkg/: encoder_node.py  pwm_node.py
platform_ws/src/platform_interfaces/: CMakeLists.txt  package.xml
platform_ws/src/platform_interfaces/msg/: SteeringSignal.msg
platform_ws/src/spi_pkg/: package.xml  setup.cfg  setup.py
platform_ws/src/spi_pkg/spi_pkg/: _test_spi__send_node.py  receive_spi_node.py
ros2_ws/src/cpp_package/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_package/src/: camera_pub.cpp
ros2_ws/src/test_package/: package.xml  setup.py
ros2_ws/src/test_package/test_package/: camera_cv2_node.py  gpio_pwm_test.py  gpio_test_node.py
